<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="Game Preference">
        <ListPreference
            app:defaultValue="Easy"
            app:entries="@array/game_level"
            app:entryValues="@array/game_level_values"
            app:key="game_level"
            app:title="Level"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="@string/music_setting"
            app:summaryOff="No Music"
            app:summaryOn="Music On"
            app:title="Music Setting" />
        <SeekBarPreference
            app:defaultValue="100"
            app:dependency="@string/music_setting"
            app:enabled="true"
            app:key="music_volume"
            app:title="Music Volume" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/player_info">
        <EditTextPreference
            app:key="player_name"
            app:title="@string/player_name"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>
